--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
 			Created with &hearts; by <span class="name">GA</span>
 		</p>
 	</footer>
+	<script src="js/main.js"></script>
 </body>
 </html>
