added some of the bonus challenge stuff to the deliverable

--- a/index.html
+++ b/index.html
@@ -11,20 +11,31 @@
 		<h1>Memory Game</h1>
 	</header>
 	<nav>
-		<a href="#instructions">Instructions</a>
-		<a href="#game">Game</a>
+		<a href="#instructionshead">Instructions</a>
+		<a href="#game-board">Game</a>
 	</nav>
 	<main>
-	<h2 id='instructions'>Instructions</h2>
-		<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
+	<h2 id='instructionshead'>Instructions</h2>
+		<p class='instructions'>
+			Concentration, also known as Match Match, Memory, Pelmanism, 
+			Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are 
+			laid face down on a surface and two cards are flipped face up over each turn. 
+			The object of the game is to turn over pairs of matching cards.
+		</p>
 		<div id="game-board" class="board clearfix"></div>
+		<div class="ga-bonus clearfix">
+			<p id="score" class="score">
+				Tries:&nbsp;&nbsp;<span id="tries">0</span>&nbsp;&nbsp;&nbsp;&nbsp;Matches:&nbsp;&nbsp;<span id="matches">0</span>
+			</p>
+			<button><strong>Reset Flipped Cards</strong></button>
+		</div>
 	</main>
 	<footer class="clearfix">
 		<p class="copyright">
 			Copyright 2017
 		</p>
 		<p class="message">
-			Created with &hearts; by <span class="name">GA</span>
+			Created with &hearts; by Max for <span class="name">GA</span>
 		</p>
 	</footer>
 	<script src="js/main.js"></script>
