--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 	<main>
 	<h2 id='instructionshead'>Instructions</h2>
 		<p class='instructions'>
-			Concentration, also known as Match Match, Memory, Pelmanism, 
-			Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are 
-			laid face down on a surface and two cards are flipped face up over each turn. 
+			Concentration, also known as Match Match, Memory, Pelmanism,
+			Shinkei-suijaku, Pexeso, or simply Pairs, is a card game in which all of the cards are 
+			laid face down on a surface and two cards are flipped face up over each turn.
 			The object of the game is to turn over pairs of matching cards.
 		</p>
 		<div id="game-board" class="board clearfix"></div>
